<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <!-- Strings used for UI titles -->
    <string name="app_main_iu_title">Main - Sunshine</string>
    <string name="app_detailed_ui_title">Detail - Sunshine</string>
    <string name="app_settings_ui_title">Settings - Sunshine</string>
    <!-- Strings used for the options menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh - FRG</string>
    <string name="lblDetailedForecastData">Detailed Forecast Data</string>
    <string name="action_about">About</string>
    <string name="action_fragment_item1">Show Prefs</string>
    <string name="forecast_detail_menu_item1">Forecast Detail menu Item 1</string>
    <!-- Strings used in the settings UI -->
    <string name="edit_text_location_key" translatable="false">edit_text_location_setting</string>
    <string name="edit_text_location_title">Location Preference</string>
    <string name="edit_text_location_summary">Select your preferred location for the forecast</string>
    <string name="edit_text_location_default" translatable="false">94043</string>
    <string name="list_units_pref_key">list_units_pref_key</string>
    <string name="list_units_pref_default">@string/list_units_pref_value_2</string>
    <string name="list_units_pref_title">Units</string>
    <string name="list_units_pref_summary">Select forecast preferred units</string>
    <string name="list_units_pref_label_1">Imperial</string>
    <string name="list_units_pref_label_2">Metric</string>
    <string name="list_units_pref_value_1">Imperial</string>
    <string name="list_units_pref_value_2">Metric</string>
    <string name="switch_units_pref_key">switch_units_pref_key</string>
    <string name="switch_units_pref_title">Units (Switch View Test)</string>
    <string name="switch_units_pref_summary">Select forecast preferred units</string>

</resources>
